tests/specs/node/esm_import_node_addon/main.ts
// @ts-ignore: importing a binary native addon
import addon from "native-mod/addon.node";
console.log(addon);
